Added error handling, etc.
